<package>
   <name>structlog</name>
   <version>16.1.0</version>
   <description>
      Structured Logging for Python http://www.structlog.org/
   </description>
   <maintainer email="asmodehn@gmail.com">AlexV</maintainer>
   <author>Hynek Schlawack</author>
   <license>BSD</license>
   <url type="repository">https://github.com/hynek/structlog</url>

   <buildtool_depend>catkin</buildtool_depend>
   <build_depend version_gte="0.1.9">catkin_pip</build_depend>

   <build_depend>python-six</build_depend>

</package>


